k8s/whale3070/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whale3070blog
  namespace: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: whale3070blog
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: whale3070blog
    spec:
      containers:
        - name: whale3070blog
          image: 23.94.174.102:8911/xenoamess/whale3070blog:latest
          ports:
            - name: http
              containerPort: 80
          resources:
            requests:
              cpu: 100m
              memory: 50Mi
            limits:
              cpu: 1000m
              memory: 500Mi
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 20    # 容器启动后多久开始探测
            timeoutSeconds: 2          # 表示容器必须在2s内做出相应反馈给probe，否则视为探测失败
            periodSeconds: 30          # 探测周期，每30s探测一次
            successThreshold: 1        # 连续探测1次成功表示成功
            failureThreshold: 10        # 连续探测3次失败表示失败
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 20    # 容器启动后多久开始探测
            timeoutSeconds: 2          # 表示容器必须在2s内做出相应反馈给probe，否则视为探测失败
            periodSeconds: 30          # 探测周期，每30s探测一次
            successThreshold: 1        # 连续探测1次成功表示成功
            failureThreshold: 10        # 连续探测3次失败表示失败
