k8s/whale3070/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whale3070blog
  namespace: backend
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: whale3070blog
